--- a/package.json
+++ b/package.json
@@ -9,33 +9,54 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "^48.0.0",
+    "@walletconnect/react-native-compat": "^2.10.6",
+    "@web3modal/core": "^4.2.1",
+    "@web3modal/wagmi": "^3.3.2",
+    "@web3modal/wagmi-react-native": "^1.0.1",
+    "alchemy-sdk": "^3.0.0",
+    "expo": "~49.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.5",
     "expo-linear-gradient": "^13.0.2",
-    "expo-status-bar": "~1.4.4",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.16.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.72.6",
     "react-native-card-stack-swiper": "^1.2.5",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "~1.9.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "string-width": "4.2.3",
+    "viem": "^1.20.1",
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/helper-get-function-arity": "^7.16.7",
-    "@types/react": "~18.0.27",
+    "@callstack/eslint-config": "^14.0.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "~0.63.2",
-    "prettier": "^2.2.1",
-    "typescript": "^4.9.4"
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
